--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>MG Development</title>
+    <title>Maciej Gortych | Web Development | Tworzenie stron internetowych</title>
   </head>
   <body>
     <div id="root"></div>
